# cpp-cookbook

./: mixcrtp.cc
cov/: CMakeLists.txt
cov/src/: converter-test.cpp  converter.cpp
cpp/: .clang-format  stc_tmpl_seq.cc
cpp/cov/src/: converter.hpp  example.cpp
cpp/kol/: CMakeLists.txt  kol.proto  server.cc
cpp/metal/: demo.cc
gram_reserver/: CMakeLists.txt  gramc.cc
kol/: client.cc
py/: send-pubip_or.py
simd/: time.cc
